remove unnessasary style and fix page links on mobile layout

--- a/stylesheets/theme.scss
+++ b/stylesheets/theme.scss
@@ -51,7 +51,3 @@
 .tags {
   text-transform: uppercase;
 }
-
-.linkedIn img {
-  border: 0px;
-}
